# TelloCppDriver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
conf/: CMakeLists.txt.in  TelloDriverConfig.hpp.in
docs/: TelloCppDoxygen  TelloDriver.drawio
examples/: CMakeLists.txt  manual_manouvers.cpp  manual_takeoff.cpp  simple_connection.cpp  simple_land.cpp  simple_takeoff.cpp
include/TelloDriver/: TelloDriver.hpp
lib/: asio-1.18.0.tar.bz2
src/: TelloDriver.cpp
src/packet_parser/: protocol.cpp  protocol.hpp
src/packet_parser/test/: packet_test.cpp  packet_test.hpp
src/packet_parser/utils/: Timer.hpp  commands.hpp  crc.hpp  utils.hpp
src/tello_telemetry/: TelloCommander.cpp  TelloCommander.hpp  TelloTelemetry.cpp  TelloTelemetry.hpp
src/tello_telemetry/IncommingDataObservers/: TelloAltLimitMsgObserver.cpp  TelloAltLimitMsgObserver.hpp  TelloAttLimitMsgObserver.cpp  TelloAttLimitMsgObserver.hpp  TelloConnAckMsgObserver.cpp  TelloConnAckMsgObserver.hpp  TelloFlightDataMsgObserver.cpp  TelloFlightDataMsgObserver.hpp  TelloLogDataMsgObserver.cpp  TelloLogDataMsgObserver.hpp  TelloLogHeaderMsgObserver.cpp  TelloLogHeaderMsgObserver.hpp  TelloLowBatThreshMsgObserver.cpp  TelloLowBatThreshMsgObserver.hpp  TelloPowerOnTimerMsgObserver.cpp  TelloPowerOnTimerMsgObserver.hpp  TelloWifiMsgObserver.cpp  TelloWifiMsgObserver.hpp
src/tello_telemetry/OutGoingCommandsObservers/: TelloAckLogHeaderIdSenderObserver.cpp  TelloAckLogHeaderIdSenderObserver.hpp  TelloStickCommandsObserver.cpp  TelloStickCommandsObserver.hpp
src/tello_telemetry/docs/: TelloCommander.drawio  TelloTelemetry.drawio
src/tello_telemetry/flight_data/: FlightData.cpp  FlightData.hpp  IFlightDataGetter.hpp
src/tello_telemetry/log_data/: ILogDataGetter.hpp  ILogDataUpdater.hpp  LogData.cpp  LogData.hpp  LogNewImuAttiFeedback.cpp  LogNewImuAttiFeedback.hpp  LogNewMvoFeedback.cpp  LogNewMvoFeedback.hpp
src/tello_telemetry/test/: commands_test.cpp  commands_test.hpp  flight_data_test.cpp  flight_data_test.hpp  helper.hpp
src/tello_telemetry/utils/: IReciever.hpp  ISendAckLog.hpp  ISendStickCommands.hpp  ISender.hpp  TelloSocket.cpp  TelloSocket.hpp
src/tello_telemetry/utils/data_manager/: DataManager.cpp  DataManager.hpp  IAltLimitMsgDataManager.hpp  IAttLimitMsgDataManager.hpp  IConnAckMsgDataManager.hpp  IFlightDataMsgDataManager.hpp  ILogDataConnectionInformationSupply.hpp  ILogDataMsgDataManager.hpp  ILogHeaderMsgDataManager.hpp  ILogImuAttitudeMsgDataManager.hpp  ILowBatThreshMsgDataManager.hpp  IPowerOnTimerMsgDataManager.hpp  IWifiMsgDataManager.hpp
src/tello_telemetry/utils/movement_commands/: MovementCommandsManager.cpp  MovementCommandsManager.hpp  MovementsToPacketConverter.cpp  MovementsToPacketConverter.hpp
src/tello_telemetry/utils/movement_commands/test/: MovementCommandsManagerTest.cpp  movement_commands_manager_test.cpp  movement_commands_manager_test.hpp
src/tello_telemetry/utils/telemetry_data/: TelemetryData.hpp
src/tello_telemetry/utils/tello_observer/: DataMgr.hpp  IDataMgrSubject.hpp  IFlightDataObserver.hpp  IImuAttitudeObserver.hpp  IObserver.hpp  IPositionVelocityObserver.hpp  ISubject.hpp
src/tello_telemetry/utils/test/: socket_test.cpp  socket_test.hpp
src/tello_vis/lib/h264decoder/: readme.md
src/tello_vis/test/: basic_vis_tests.cpp
src/tello_vis/utils/: IVisReceiver.hpp  TelloVisSocket.cpp  TelloVisSocket.hpp
test/: CMakeLists.txt  TelloDriverTest.cpp  TelloSocketTest.cpp
